--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "sql.js": "^1.10.3"
   }
 }
